@@ -63,12 +63,15 @@ private:
   menu_listener about;
 };
 
+/* The about dialog.  */
 class about_dialog
 {
 private:
   GtkWidget *dialog;
 protected:
   static void populate(GtkWidget *);
+  static void handle_ok(GtkWidget *, gpointer);
+  static gint handle_delete_event(GtkWidget *, GdkEventAny *, gpointer);
 public:
   about_dialog();
   ~about_dialog();
